Added installation polymer via bower and update to v1.2.0

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ test/version_tmp
 tmp
 bower_components
 .ruby-version
+app/assets/javascripts/polymer/*.json
+app/assets/javascripts/polymer/*.log
+app/assets/javascripts/polymer/*.txt
+app/assets/javascripts/webcomponentsjs/*.json
+app/assets/javascripts/webcomponentsjs/*.log
+app/assets/javascripts/webcomponentsjs/*.md
+app/assets/javascripts/webcomponentsjs/*.js
+!app/assets/javascripts/webcomponentsjs/webcomponents.js
+!app/assets/javascripts/webcomponentsjs/webcomponents-lite.js
